--- a/avant-zen/browser/index.html
+++ b/avant-zen/browser/index.html
@@ -1,14 +1,28 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en" data-critters-container>
-<head>
-  <meta charset="utf-8">
-  <title>AvantZen</title>
-  <base href="https://github.com/miguelmatg/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-<style>@charset "UTF-8";body{background-color:#17202a}
-</style><link rel="stylesheet" href="styles-KJPCANE3.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-KJPCANE3.css"></noscript></head>
-<body>
-  <app-root></app-root>
-<script src="polyfills-RT5I6R6G.js" type="module"></script><script src="main-7JTNY2K7.js" type="module"></script></body>
+  <head>
+    <meta charset="utf-8" />
+    <title>AvantZen</title>
+    <base href="https://miguelmatg.github.com/AvantZen/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <style>
+      @charset "UTF-8";
+      body {
+        background-color: #17202a;
+      }
+    </style>
+    <link
+      rel="stylesheet"
+      href="styles-KJPCANE3.css"
+      media="print"
+      onload="this.media='all'"
+    />
+    <noscript><link rel="stylesheet" href="styles-KJPCANE3.css" /></noscript>
+  </head>
+  <body>
+    <app-root></app-root>
+    <script src="polyfills-RT5I6R6G.js" type="module"></script>
+    <script src="main-7JTNY2K7.js" type="module"></script>
+  </body>
 </html>
