--- a/avant-zen/browser/index.html
+++ b/avant-zen/browser/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>AvantZen</title>
-    <base href="https://miguelmatg.github.com/AvantZen/" />
+    <base href="https://miguelmatg.github.io/AvantZen/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <style>
